Form errors alignment fix.

--- a/site_media/css/dev.css
+++ b/site_media/css/dev.css
@@ -18,8 +18,18 @@
     height: 25px;
     color: #838383;
 }
-#store_search input[type=text]	{border:1px solid #9e9e9e; width:160px; margin-bottom:10px; line-height:20px; height:20px;}
-#add_to_cart input[type=text]	{ border: 1px solid #666; margin-bottom:10px; width:40px;}
+#store_search input[type=text]	{
+    border:1px solid #9e9e9e;
+    width:160px;
+    margin-bottom:10px;
+    line-height:20px;
+    height:20px;
+}
+#add_to_cart input[type=text]	{
+    border: 1px solid #666;
+    margin-bottom:10px;
+    width:40px;
+}
 #add_to_cart input[type=submit]	{
     text-transform: uppercase;
 }
@@ -119,4 +129,15 @@
 }
 .saveBtn    {
     background: url("/site_media/img/save.jpg") no-repeat left top;
+}
+.errorlist  {
+    margin:0px;
+    color:#FF0000 ;
+    font-style:italic;
+    font-size:10px;
+    padding:0px;
+    line-height:10px;
+}
+.errorlist li	{
+    margin-left:210px;
 }
